THRIFT-2642 Recursive structs don't work in python

See https://issues.apache.org/jira/browse/THRIFT-2642.